# e-wallet

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  conftest.py  main.py  managers.py  pyproject.toml  utils.py
commands/: actions.py  argument_types.py  commands.py  config.py  filter.py  typing.py
data/: data.csv
services/: converters.py  data.py  enums.py  errors.py  schema.py
tests/: commands.py  schema.py  tests.py
